[project]
name = "root-cause-ai-assistant"
version = "0.1.0"
description = "Operational Excellence AI Assistant for clinical process 5 Whys reviews."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.40.0",
    "langchain>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "pydantic>=2.9.0",
]
